--- a/cowboy_magic.ipynb
+++ b/cowboy_magic.ipynb
@@ -63,6 +63,46 @@
     },
     {
       "metadata": {
+        "id": "X_iNRPgfuPkt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "3eaac692-0cb9-42ce-b03c-dac477d1b368"
+      },
+      "cell_type": "code",
+      "source": [
+        "%%Cowboy python test.py\n",
+        "\n",
+        "class Rectangle():\n",
+        "  def __init__(self):\n",
+        "    self.width = 0.\n",
+        "    self.height = 0.\n",
+        "  def set_values(self,x,y):\n",
+        "    self.width = x\n",
+        "    self.height = y\n",
+        "  def area(self):\n",
+        "    return self.width*self.height\n",
+        "  \n",
+        "rect = Rectangle()\n",
+        "rect.set_values(8,6.375)\n",
+        "print(\"area: {}\".format(rect.area()))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "area: 51.0\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
         "id": "_Z1FOxZphmkS",
         "colab_type": "code",
         "colab": {
@@ -142,7 +182,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "000db723-4d80-4ce3-abcb-7642d107e36b"
+        "outputId": "3bcc01b2-35d6-48f9-caf7-bf49fdb1e9c5"
       },
       "cell_type": "code",
       "source": [
@@ -163,16 +203,42 @@
         "}\n",
         "\n",
         "const rect = new Rectangle()\n",
-        "rect.set_values(8,6.375)\n",
+        "rect.set_values(8.,6.375)\n",
         "console.log(\"area:\",rect.area())\n"
       ],
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "area: 51\n",
             "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "TsiCtETrvsJv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8e341a17-001b-4742-a603-81c07635989c"
+      },
+      "cell_type": "code",
+      "source": [
+        "# command to list the directory showing the files that were created\n",
+        "!ls"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a.out  datalab\ttest  test.cpp\ttest.js  test.py\r\n"
           ],
           "name": "stdout"
         }
